CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("Array" C)

#SET(TARGET_GROUP production CACHE STRING "Group to build")

#ADD_SUBDIRECTORY(./CLib/Error)
ADD_SUBDIRECTORY(./CLib/Array)
ADD_SUBDIRECTORY(./Shell/Sources)
#TARGET_LINK_LIBRARIES(LinkLib PUBLIC ArrayLib ShellLib)


TARGET_INCLUDE_DIRECTORIES(ArrayLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/CLib/Array)


INCLUDE(CTest)
ADD_SUBDIRECTORY(Unity)  


#ADD_SUBDIRECTORY(./CLib/Error/Test)
ADD_SUBDIRECTORY(./CLib/Test)
ADD_SUBDIRECTORY(./Shell/Test)


